--- a/src/pages/somepage.mdx
+++ b/src/pages/somepage.mdx
@@ -6,5 +6,17 @@ title: Any page
 
 Blah blah blah, and if you are not using Elastic Cloud blah blah
 
+The logo and info regarding Elastic Cloud below is included from a standalone `.mdx` file, and inside the source of this page it is imported by:
+
+```shell
+import CloudCallout from '../includefiles/cloudCallout.mdx'
+```
+
+It is then rendered by
+
+```shell
+<CloudCallout/>
+```
+
 <CloudCallout/>
 
